# MoodMusic

./: .gitignore  README.md  pyproject.toml
scripts/: apply_song_list.py
src/moodmusic/: api.py  cli.py  mcp_server.py  models.py  recommender.py  web.py
src/moodmusic/data/: __init__.py  songs.json
